# bgtree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config  config.toml
include/: config.hpp  fractal_binary_tree.hpp  fractal_plant.hpp  geometry.hpp  lsystem.hpp  point.hpp  spiral.hpp  user.hpp  utils.hpp
include/lsystem/: fractal_binary_tree.hpp  fractal_plant.hpp  lsystem.hpp  triangle.hpp
src/: fractal_binary_tree.cpp  fractal_plant.cpp  geometry.cpp  lsystem.cpp  main.cpp  spiral.cpp  user.cpp  utils.cpp
src/lsystem/: fractal_binary_tree.cpp  fractal_plant.cpp  lsystem.cpp
